# vespa-ann-benchmark

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dist.sh  screwdriver.yaml  vespa-build-dependencies-1.0.1-1.el8.noarch.rpm
.copr/: Makefile
.github/workflows/: ci.yml
ann_benchmark/: CMakeLists.txt
ann_benchmark/src/vespa/ann_benchmark/: setup.py.in  vespa_ann_benchmark.cpp
